--- a/todo.css
+++ b/todo.css
@@ -102,6 +102,7 @@ body {
 .list-name::-webkit-input-placeholder,
 .task-input::-webkit-input-placeholder {
   color: var(--text);
+  opacity: 0.6;
 }
 
 .save-btn,
@@ -121,7 +122,7 @@ body {
 /* 
 .task-wrapper {
   width: 90%;
-  height: 85%;
+  height: 80%;
   display: grid;
   grid-template-rows: auto;
   row-gap: 2%;
