--- a/todo.css
+++ b/todo.css
@@ -43,7 +43,7 @@ body {
 }
 
 .header {
-  width: 100dvw;
+  width: 100%;
   height: 5dvh;
   background-color: #7d8ca35d;
   backdrop-filter: blur(15px);
@@ -78,6 +78,7 @@ body {
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
 }
 
 .input-container {
@@ -119,6 +120,13 @@ body {
 }
 
 /* TASKS */
+
+.task-container {
+  border: 1px solid var(--text);
+  border-radius: 0 0 1rem 1rem;
+  width: 100%;
+  height: 80%;
+}
 /* 
 .task-wrapper {
   width: 90%;
@@ -188,3 +196,9 @@ body {
   color: #fff;
 }
  */
+
+@media screen and (width > 600px) {
+  .main-container {
+    width: 50dvw;
+  }
+}
