--- a/todo.css
+++ b/todo.css
@@ -13,12 +13,11 @@
 
 :root {
   --bg1: #081b29;
-  --bg2: #0a0a0a18;
-  --delft-blue: #1d3461ff;
-  --polynesian-blue: #1f487eff;
-  --lapis-lazuli: #376996ff;
-  --silver-lake-blue: #6290c8ff;
-
+  --bg1-grad: #0f293b;
+  --bg-header: #7d8ca35d;
+  --m-cont: #7d8ca3;
+  --m-cont-grad: #7d8ca35d;
+  --border: #6290c8ff;
   --text: #f5f9e9;
 }
 
@@ -37,7 +36,7 @@ i {
 }
 
 body {
-  background-image: linear-gradient(to bottom, var(--bg1), #0f293b);
+  background-image: linear-gradient(to bottom, var(--bg1), var(--bg1-grad));
   font-family: 'Poppins', sans-serif;
   width: 100dvw;
   height: 100dvh;
@@ -49,7 +48,7 @@ body {
 .header {
   width: 100%;
   height: 5dvh;
-  background-color: #7d8ca35d;
+  background-color: var(--bg-header);
   backdrop-filter: blur(15px);
   position: fixed;
   top: 0;
@@ -70,11 +69,10 @@ body {
 /* MAIN */
 
 .main-container {
-  border: 1px solid red;
   width: 80dvw;
   height: 70dvh;
-  background-image: linear-gradient(45deg, #7d8ca3, #7d8ca35d);
-  border: 2px outset #6290c8ff;
+  background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad));
+  border: 2px outset var(--border);
   border-radius: 2rem;
   padding: 1rem;
   box-shadow: 0 5px 10px #00000050;
