--- a/todo.css
+++ b/todo.css
@@ -14,10 +14,9 @@
 :root {
   --bg1: #0a1f30;
   --bg1-grad: #143e60;
-
   --bg-header: #7d8ca35d;
-  --m-cont: #7d8ca3;
-  --m-cont-grad: #7d8ca35d;
+  --m-cont: #7d8ca35d;
+  --m-cont-grad: #143e60;
   --border: #6290c8ff;
   --text: #f5f9e9;
 }
@@ -189,6 +188,11 @@ body {
   background-color: transparent;
   color: var(--text);
   padding-inline: 1rem;
+}
+
+.task-name-cross {
+  text-decoration: line-through;
+  color: red;
 }
 
 @media screen and (width > 600px) {
