Fix cross/undo button

--- a/todo.css
+++ b/todo.css
@@ -119,7 +119,9 @@ body {
 .list-name-remove-btn,
 .task-input-add-btn,
 .task-remove-btn,
-.task-cross-btn {
+.task-cross-btn,
+.cross-icon,
+.undo-icon {
   border: 1px solid red;
   font-weight: bold;
   text-transform: uppercase;
@@ -193,6 +195,10 @@ body {
 .task-name-cross {
   text-decoration: line-through;
   color: red;
+}
+
+.undo-icon {
+  display: none;
 }
 
 .show {
