--- a/todo.css
+++ b/todo.css
@@ -33,7 +33,7 @@ button {
 }
 
 .bx {
-  font-size: clamp(2rem, 4vw, 3rem);
+  font-size: clamp(1rem, 4vw, 3rem);
 }
 
 body {
@@ -61,7 +61,9 @@ body {
 
 .logo,
 .list-folder {
-  font-size: clamp(2rem, 4vw, 3rem);
+  display: block;
+  margin: 0;
+  font-size: clamp(1rem, 4vw, 3rem);
   font-weight: bold;
   text-transform: uppercase;
   color: var(--text);
@@ -91,7 +93,6 @@ body {
 
 .input-container {
   border: 1px solid var(--text);
-  border: 1px solid red;
   border-radius: 1rem 1rem 0 0;
   width: 100%;
   height: 20%;
@@ -102,7 +103,6 @@ body {
 
 .list-name,
 .task-input {
-  border: 1px solid red;
   width: 90%;
   font-size: clamp(1rem, 3vw, 2rem);
   background-color: transparent;
@@ -124,7 +124,6 @@ body {
 .task-cross-btn,
 .cross-icon,
 .undo-icon {
-  border: 1px solid red;
   font-weight: bold;
   text-transform: uppercase;
   color: var(--text);
@@ -160,10 +159,9 @@ body {
 .task-wrapper {
   width: 100%;
   height: 100%;
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
-  gap: 2%;
+  gap: 1%;
   overflow-y: auto;
 }
 
@@ -177,18 +175,16 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: #fff;
+  border-radius: 1rem;
 }
 
 .task {
   width: 100%;
-  height: 10%;
-  border: 1px solid red;
-
+  min-height: 10%;
   display: grid;
   grid-template-columns: 2fr repeat(2, 0.5fr);
   grid-template-rows: auto;
   place-items: center;
-  row-gap: 2%;
 }
 
 .task-name-wrapper {
@@ -223,15 +219,26 @@ body {
 }
 
 @media screen and (width > 600px) {
-  html {
-    font-size: 35%;
-  }
   .main-container {
     width: 40dvw;
   }
 }
 
 @media screen and (orientation: landscape) and (height < 500px) {
+  html {
+    font-size: 50%;
+  }
+
+  .logo,
+  .list-folder {
+    font-size: 2rem;
+    height: 20px;
+  }
+
+  .list-folder i {
+    font-size: 2rem;
+  }
+
   .main-container {
     width: 80%;
     flex-flow: row;
@@ -240,20 +247,22 @@ body {
   .input-container {
     border-radius: 1rem;
     height: 90%;
+    padding: 1%;
     display: grid;
-    grid-template-columns: 2fr repeat(2, 0.5fr);
-    place-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    place-items: center start;
+    gap: 2%;
   }
 
   .list-name,
   .task-input {
-    border: 1px solid red;
+    grid-column: 1 / 3;
     width: 90%;
-    font-size: clamp(1rem, 3vw, 2rem);
-    background-color: transparent;
-    color: var(--text);
-    padding-inline: 1rem;
-    border-bottom: 1px solid var(--text);
+  }
+
+  .task-qty {
+    width: 25%;
   }
 
   .task-container {
