--- a/todo.css
+++ b/todo.css
@@ -37,6 +37,7 @@ button {
 }
 
 body {
+  position: relative;
   background-image: linear-gradient(to bottom, var(--bg1), var(--bg1-grad));
   font-family: 'Poppins', sans-serif;
   width: 100dvw;
@@ -50,7 +51,6 @@ body {
   width: 100%;
   height: 5dvh;
   background-color: var(--bg-header);
-  backdrop-filter: blur(15px);
   position: fixed;
   top: 0;
   left: 0;
@@ -217,6 +217,56 @@ body {
 .hidden {
   display: none;
 }
+
+/* MODALS */
+
+.task-remove-modal {
+  position: absolute;
+  /* top: -50%;
+  left: -50%;
+  transform: translate(-50%, -50%); */
+  width: 50%;
+  height: 20%;
+  /* background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad)); */
+  background-color: var(--m-cont-grad);
+  border: 2px outset var(--border);
+  border-radius: 2rem;
+  padding: 1rem;
+  box-shadow: 0 5px 10px #00000050;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 5;
+}
+
+.task-remove-modal h1 {
+  font-size: clamp(1rem, 4vw, 3rem);
+  color: var(--text);
+}
+
+.y-n-btn {
+  width: 70%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.remove-confirm {
+  background: none;
+  font-size: clamp(1rem, 4vw, 3rem);
+  color: var(--text);
+  font-weight: 700;
+}
+
+/* .modal-hidden {
+  display: none;
+} */
+
+.overlay {
+  filter: blur(2px);
+}
+
+/* MEDIA QUERIES */
 
 @media screen and (width > 600px) {
   .main-container {
