--- a/todo.css
+++ b/todo.css
@@ -222,9 +222,6 @@ body {
 
 .task-remove-modal {
   position: absolute;
-  /* top: -50%;
-  left: -50%;
-  transform: translate(-50%, -50%); */
   width: 50%;
   height: 20%;
   /* background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad)); */
@@ -237,7 +234,7 @@ body {
   flex-flow: column nowrap;
   justify-content: space-evenly;
   align-items: center;
-  z-index: 5;
+  z-index: 10;
 }
 
 .task-remove-modal h1 {
@@ -253,17 +250,31 @@ body {
 
 .remove-confirm {
   background: none;
+  border: 2px solid var(--text);
+  border-radius: 1rem;
+  padding: 1% 2%;
   font-size: clamp(1rem, 4vw, 3rem);
   color: var(--text);
   font-weight: 700;
 }
 
-/* .modal-hidden {
+.modal--hidden {
   display: none;
-} */
+}
 
 .overlay {
-  filter: blur(2px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.overlay--hidden {
+  display: none;
 }
 
 /* MEDIA QUERIES */
