--- a/todo.css
+++ b/todo.css
@@ -220,15 +220,19 @@ body {
 
 /* MODALS */
 
-.task-remove-modal {
+.task-remove-modal,
+.list-remove-modal {
   position: absolute;
   width: 50%;
-  height: 20%;
+  max-width: 50rem;
+  height: 50%;
+  max-height: 20rem;
   /* background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad)); */
   background-color: var(--m-cont-grad);
   border: 2px outset var(--border);
   border-radius: 2rem;
   padding: 1rem;
+  text-align: center;
   box-shadow: 0 5px 10px #00000050;
   display: flex;
   flex-flow: column nowrap;
@@ -237,7 +241,8 @@ body {
   z-index: 10;
 }
 
-.task-remove-modal h1 {
+.task-remove-modal h1,
+.list-remove-modal h1 {
   font-size: clamp(1rem, 4vw, 3rem);
   color: var(--text);
 }
@@ -252,14 +257,10 @@ body {
   background: none;
   border: 2px solid var(--text);
   border-radius: 1rem;
-  padding: 1% 2%;
+  padding: 2% 3%;
   font-size: clamp(1rem, 4vw, 3rem);
   color: var(--text);
   font-weight: 700;
-}
-
-.modal--hidden {
-  display: none;
 }
 
 .overlay {
@@ -268,12 +269,21 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(3px);
   z-index: 5;
 }
 
-.overlay--hidden {
+/* UTILITY CLASSES - CLASSES UTILITÁRIAS - SHOW/HIDDEN */
+
+.show {
+  display: block;
+}
+
+.hidden {
   display: none;
 }
 
