--- a/todo.css
+++ b/todo.css
@@ -103,6 +103,7 @@ body {
 
 .list-name,
 .task-input {
+  border: 1px solid red;
   width: 90%;
   font-size: clamp(1rem, 3vw, 2rem);
   background-color: transparent;
@@ -134,6 +135,7 @@ body {
 /* TASKS */
 
 .task-container {
+  border: 1px solid red;
   border: 1px solid var(--text);
   border-radius: 0 0 1rem 1rem;
   width: 100%;
@@ -177,6 +179,7 @@ body {
 }
 
 .task-name {
+  border: 1px solid red;
   width: 90%;
   font-size: clamp(1rem, 3vw, 2rem);
   text-transform: capitalize;
