--- a/todo.css
+++ b/todo.css
@@ -315,23 +315,26 @@ body {
   }
 
   .input-container {
+    border: 1px solid red;
     border-radius: 1rem;
     height: 90%;
     padding: 1%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: auto;
     place-items: center start;
     gap: 2%;
   }
 
   .list-name,
   .task-input {
+    border: 1px solid red;
     grid-column: 1 / 3;
     width: 90%;
   }
 
   .task-container {
+    border: 1px solid red;
     border-radius: 1rem;
     height: 90%;
   }
