--- a/todo.css
+++ b/todo.css
@@ -279,16 +279,14 @@ body {
 .task-wrapper-modal {
   position: absolute;
   width: 50%;
-  max-width: 50rem;
   height: 50%;
-  max-height: 20rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1%;
+  overflow-y: auto;
   /* background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad)); */
   background-color: var(--m-cont-grad);
   border: 2px outset var(--border);
-  display: grid;
-  grid-template-columns: 2fr repeat(2, 0.5fr);
-  grid-template-rows: auto;
-  place-items: center;
   border-radius: 2rem;
   padding: 1rem;
   text-align: center;
