Add heading to taskWrapperModal

--- a/todo.css
+++ b/todo.css
@@ -295,6 +295,13 @@ body {
   animation: fadeIn 500ms forwards;
 }
 
+h3 {
+  font-size: clamp(1rem, 3vw, 2rem);
+  color: var(--text);
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -348,7 +355,6 @@ body {
   }
 
   .input-container {
-    border: 1px solid red;
     border-radius: 1rem;
     height: 90%;
     padding: 1%;
@@ -361,13 +367,11 @@ body {
 
   .list-name,
   .task-input {
-    border: 1px solid red;
     grid-column: 1 / 3;
     width: 90%;
   }
 
   .task-container {
-    border: 1px solid red;
     border-radius: 1rem;
     height: 90%;
   }
