--- a/todo.css
+++ b/todo.css
@@ -277,12 +277,14 @@ body {
 }
 
 .task-wrapper-modal {
+  border: 1px solid red;
   position: absolute;
-  width: 50%;
+  width: 40%;
   height: 50%;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  gap: 1%;
+  gap: 2%;
   overflow-y: auto;
   /* background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad)); */
   background-color: var(--m-cont-grad);
