--- a/todo.css
+++ b/todo.css
@@ -280,7 +280,7 @@ body {
 
 .task-wrapper-modal {
   position: absolute;
-  width: 40%;
+  width: 60%;
   height: 50%;
   display: flex;
   align-items: center;
@@ -356,6 +356,10 @@ body {
 @media screen and (width > 600px) {
   .main-container {
     width: 40dvw;
+  }
+
+  .task-wrapper-modal {
+    width: 40%;
   }
 }
 
