--- a/todo.css
+++ b/todo.css
@@ -81,7 +81,7 @@ body {
 
 .main-container {
   width: 80dvw;
-  /* width: fit-content; */
+  width: fit-content;
   height: 70dvh;
   background-image: linear-gradient(45deg, var(--m-cont), var(--m-cont-grad));
   border: 2px outset var(--border);
@@ -357,7 +357,7 @@ body {
 
 @media screen and (width > 600px) {
   .main-container {
-    width: 30dvw;
+    max-width: 50dvw;
   }
 
   .task-wrapper-modal {
