--- a/todo.css
+++ b/todo.css
@@ -234,7 +234,8 @@ body {
   justify-content: space-evenly;
   align-items: center;
   z-index: 10;
-  animation: fadeIn 500ms forwards;
+  transform: translateY(-10%);
+  animation: fadeIn 800ms forwards;
 }
 
 .task-remove-modal h1,
@@ -245,12 +246,14 @@ body {
 
 @keyframes fadeIn {
   from {
-    scale: 1.1;
+    /* scale: 1.1; */
+    transform: translateY(-10%);
     backdrop-filter: blur(10px);
     opacity: 0;
   }
   to {
-    scale: 1;
+    /* scale: 1; */
+    transform: translateY(0);
     backdrop-filter: blur(0);
     opacity: 1;
   }
@@ -296,7 +299,8 @@ body {
   text-align: center;
   box-shadow: 0 5px 10px #00000050;
   z-index: 10;
-  animation: fadeIn 500ms forwards;
+  transform: translateY(-10%);
+  animation: fadeIn 800ms forwards;
 }
 
 .task-wrapper-modal .task {
